Update with Week 13 and Szulsto

--- a/index.html
+++ b/index.html
@@ -1811,6 +1811,45 @@ h5 {
             <h3 class="break">Steve Manning's Character</h3>
             Drow Arachnomancer Illusionist.
 
+            <h3 class="break">Szulsto - The Mystic</h3>
+            <p><strong>As played by Simon Pancoast</strong></p>
+
+            <p>Szulsto lived in a sheltered cave-house deep in the mountains. While this might seem a terrible place to live for most, it suited Szulsto and his roommate, Illistran, quite well, for they are Mystics, a strange, very small group of people with psychic powers and abilities.  The honing of one’s psychic might require isolation and contact with only other psychic beings, so the rugged, vacant span of mountains suited the two partners quite well. Szulsto had known Illistran for a very long time. They had lived in the same village when they both discovered their psychic powers and had agreed to stick together and run away to find solace together.</p>
+            <p>Szulsto and Illistran are Yuan-Ti Purebloods, the lowest rank in the monstrous, infernal- creature-worshiping race that idolized being as snake-like as possible. He was born into a small, remote village of Yuan-Ti with something unheard of in Yuan-Ti society, a moral compass. He did not enjoy killing mindlessly or for fun, and did not enjoy torturing, the infernal rituals, or the killing of innocents. He thought that life should be preserved and honored. This made him something of a social outcast, the “weird one,” as diverging from Yuan-Ti standards could mark one as an enemy. When Szulsto’s psychic powers manifested one day out exploring, he knew he would have to run, or else be sacrificed in some unholy ritual. Little did he know that he could not escape this fate, that he was unknowingly walking his way into a worse fate.</p>
+            <p>Szulsto woke up one day to discover that he had been bound to a table in a room he had never seen before deep in a room of his house he had never seen before. He heard mutterings in some demonic language he did not recognize and turned his head as much as he could against the straps holding his head in place would allow and saw that Illistran was chanting something quietly under his breath, holding a finely serrated knife in one hand.</p>
+
+            <hr class="journal" />
+
+            <p><em>“What are you doing? Why have I been bound like this while you are free?!”</em><br/>
+            <em>“Oh good, you are awake!”</em> Illistran said, striding towards Szulsto, grinning wickedly. <em>“For what will come next to work, I need you conscious. I cannot have you dying on me during such a crucial moment!”</em></p>
+            <p>There was suddenly a sickening, blinding pain in Szulsto’s head; Illistran had sawed Szulsto’s skull open, and then, with a dizzying, awful feeling, wrenched his brain from his skull. Szulsto used his psychic powers to keep himself alive as he sensed his brain being lifted into the air and eventually placed into some new container, he realized was another, different, empty skull.</p>
+            <p><em>“Go on now,”</em> said Illistran, <em>“Connect to it. You will eventually die without a body.”</em></p>
+
+
+            <p>And so Szulsto, with no other choice, bonded his brain to the new body, which he realized was a human one.</p>
+            <p><em>“Well done! Oh, I am so excited for what comes next! I am going to have so much fun with you!”</em></p>
+            <p>Szulsto lost perception of time. Every day was the same. He would be woken up, fed some potion that kept him alive, and would then have several “features” added to his new body every day. Mandibles, tentacles, extra limbs, more eyes, feelers, wings... there were never enough modifications made to Szulsto’s new body to satisfy Illistran. Every night, before he could rest, some or all the “features” were removed, making it almost impossible for Szulsto to adapt to his new, torturous life.</p>
+            <p>Then one day, after Szulsto, against the odds, had finally started to get used to his new life, a portal was opened right in the middle of the largest wall. A voice spoke out from it.</p>
+            <p><em>“Illistran, you owe me,”</em> spoke a voice that Szulsto, through his studying of infernal creatures, recognized that it belonged to a devil.</p>
+            <p><em>“I know, I know!”</em> Responded Illistran.</p>
+            <p><em>“You have a debt to pay. And this time, you had better give me something worth it. Your last two offerings were nowhere near adequate.”</em></p>
+            <p>These words hung in the air, as Illistran seemed to be thinking his situation over. Finally, he spoke.</p>
+            <p><em>“Tell you what. I give you him,”</em> Ilistran then jestured at Szulsto, who suddenly realized what was about to happen, <em>“my most prized piece of work, and never work on this project again. In turn, my debt to you will be eternally paid. Do we have a deal?”</em></p>
+            <p><em>“...”</em></p>
+            <p><em>“Yes,”</em> the voice said.</p>
+            <p><em>“Good, Good!”</em> Cried Illistran. <em>“Now then, I can’t give you everything, only him. I will destroy all my work with your supervision, and then never attempt to work on it again.”</em></p>
+            <p><em>“What do you mean by... Oh, I get it now!”</em> Said the devil, with a horrible, audible grin, as if he knew that something truly hell-worthy was about to occur.</p>
+            <p><em>“But I will need your help, oh Mighty One,”</em> Illistran said.</p>
+            <p><em>“But of course, my faithful one,”</em> Grinned the devil.</p>
+            <p>Szulsto was suddenly bound magically in place, unable to move. He sensed, rather than heard, Illistran approaching him from behind, and heard the unsheathing of a knife.</p>
+
+            <hr class="journal" />
+
+            <p>Szulsto knew what was about to happen and braced himself for it.</p>
+            <p>Again, Szulsto’s skull was cut open, and his brain was torn out. Keeping himself together, Szulsto “heard” Illistran speak to the devil.</p>
+            <p><em>“Here you go!”</em> he said and howling with a laughter that was shared with and sounded eerily like the devil’s, lobbed Szulsto’s brain through the portal.</p>
+            <p>As his brain soared to the depths of hell, he though, <em>“No. I will not be stranded like this.”</em></p>
+            <p>And he gathered his psychic might, focused on what his original, Yuan-Ti body looked and felt like, and released a mighty burst that all but drained Szulsto of his psychic powers, reconstructing his Yuan-Ti body. Feeling it returning to its full function and repairing his brain of what damage had been done, he faded into unconsciousness as he hurtled towards his new home.</p>
         </div>
 
         <div class="page">
@@ -3665,6 +3704,79 @@ h5 {
 
                 <p>Searching no longer for truth or meaning, she found herself strangely free. Her awareness returned, and sharpened. The vacant blackness left her eyes, replaced with burning gold. She served a master again, and her master this time was her own self.</p>
             </em>
+
+            <h3 class="break">Week 13 - Aldoon and the Negotiations at The Stands</h3>
+            <strong><em>as observed by Aldoon (Steve Graham)</em></strong>
+
+            <p><em>“The winds will cool, and the mist will calm,<br/>
+            the fog will conceal, and the rains will wash away blight…”</em></p>
+
+            <p>Aldoon hummed a low brassy tone from his trunk as he quietly prayed and marched among his companions away from the wrecked landscape of the battle.</p>
+
+            <p><em>“And even the stormcloud’s arc will be as a gentle kiss,<br/>
+            that heals the wounds of the faithful and the faithless alike…”</em></p>
+
+            <p>Occasionally, as he had been reciting this prayer over and over for the last 10 minutes or so, the barest flicker of electricity would emanate from him and dance over the party. It felt like nothing at all. A brief whisper from Iolensis that would caress a shoulder, a hand, the top of a head, before hopping away to the next plodding marcher.</p>
+
+            <p><em>“Thus Iolensis, in her turn, restores and remakes,<br/>
+            that the creatures of the world may gaze upon the sunrise of a new day.”</em></p>
+
+            <p>In its wake, each who was touched by the softly crackling zephyr would heal a little more of the wounds suffered in the brief battle with the kobolds and the wolves.</p>
+
+            <p>The fact that the prayer worked at all was one of the miracles Aldoon had been pondering for many days. On the one hand, he was traveling with a motley band that had a myriad of motivations - few of them truly righteous. He knew Verthandi in particular was taking opportunities to devour the occasional brain of a downed foe, and tried desperately to remember that it was the way of his people, perhaps even natural for him. It still made him sick to his stomach.</p>
+            <p>On the other hand, he had never before felt the presence of Iolensis so strongly - never before been able to wield so deftly the divine energy that could heal or destroy. In recent days the words of the prayers came swiftly and easily to his mind, and the will of the Sister of Storms could be done even here, so far from home.</p>
+            <p>His augury at the tiny shrine in Mithras had not yielded much, and yet the miracle perhaps was merely that the shrine was there! In this far away land - a place all but unreachable from his home - he had found a place to worship and connect with his patroness.  And as he meditated on the clouds, chanted the words, and asked his question, he did not stutter, he did not falter, the words of the Augury came easily. It was entirely different from his life in Erridon - he was entirely different.</p>
+            <p>Perhaps he was meant to be here. He was meant to be in service to Enkosee. He was meant to meet and travel with Teelo to this wondrous land and see trees and sky and creatures of the land once again, and yes, even the little shrine to his Loxodon goddess. It was a little gift.  A message. <em>“You are where I need you to be. Stay true and keep going. You must see what I need you to see here.”</em></p>
+            <p>He would remain watchful.</p>
+
+            <hr class="journal" />
+
+            <p>They camped for the night in a small hollow, concealed from the roads and paths - easily defensible. Aldoon awoke briefly - they were talking about hearing giggling somewhere beyond the campsite. Probably just dryads, nyads, or fairies, he thought. Aldoon nodded off again.</p>
+            <p>He took the last watch and positioned himself to be able to see the sunrise. He wondered which divine power brought forth the sun each morning on this plane.</p>
+            <p>As he watched the sky brighten, Aldoon prayed for guidance. He soon felt a quietness wash over him, a calm. He felt no urgency, no pull in any particular direction. He felt he was being told to wait. Be patient. See what you must see.</p>
+            <p>A parable occurred to him of Guldorum of Hass. In the ancient days when Loxoda were regularly enslaved by elves and orcs and others, Goldorum withstood his slavery for ninety long years, watching and learning as much as he could of his masters’ ways. In the end, he used his knowledge and the favor of Eritrea and the Three Sisters to lead his people in rebellion and win their freedom. It is a story told to children to show how Loxoda are strong, patient, and persevere through adversity.</p>
+            <p>But it also spoke of the need for understanding and nuance. It was through understanding the peculiarities of the slave-masters’ rituals and beliefs, that Guldorum was able to trick his way to advantage. It was written that he even grew to love them to an extent, even as he burned them with divine fire and trampled them beneath his feet.</p>
+            <p>As the sunlight streamed through the trees and warmed Aldoon’s ears and face, he reflected that much was still a mystery to him about his plight here, his servitude. Likewise, Iolensis had chosen him for something, and he had much to learn from this journey before he would be ready to do her will.</p>
+
+            <hr class="journal" />
+
+            <p>They arrived at the Stands again and met with Teelo. There was discussion of contracts and battle plans. Teelo was only going through the motions. He had brought his own retinue of centaur warriors.</p>
+            <p>The discussion turned to the object Cerranos was after, and when it was suggested that it could be another piece of the Fractum Ostium, something clicked in Aldoon’s mind. It seemed obvious that this was true, though it seemed they needed to be sure. The implications of Enkosee’s possible knowledge of, and involvement in the party’s being here on this plane raised more questions than answers.</p>
+
+            <p>Cerranos arrived, and there was more talk. Aldoon watched from the shadows of a nearby structure. He cared little about the conversation. Teelo wanted an excuse to attack the caves of the invaders. Cerranos was buying time.</p>
+            <p>As Aldoon watched he came to several conclusions. Teelo would march on the caves.  Nothing that happened here would change that. They had tried earlier in the day to convince him that was a bad idea, but he had not been convinced. He would lead his army to slaughter.  Aldoon pitied him and his soldiers, but he seemed to be getting bitterly used to tragic things he couldn’t control.</p>
+            <p>Cerranos would not reveal anything about what she was after in the mines. She was here to continue the charade. No persuasion or machination would reveal an answer of what the object was to confirm the companions’ suspicions.</p>
+            <p>It dawned on Aldoon that this was all distraction. All of it. Teelo, the Great Lady of Mythras, Cerranos, the waterfall keeper, all smoke and mirrors like a cheap charlatan’s show.  Aldoon had been brought here for some reason that had nothing to do with Teelo and his doomed quest, and whether it was Enkosee or Iolensis or some other infernal agenda, it all led to the object sought after in the mine. It was perhaps the only thing of any import, and the only way forward, the only way to find his way to his purpose was to get the object first.</p>
+
+            <p>Aldoon finally saw his path, and a coldness swept over him.</p>
+            <p>There were hundreds of minions working away at the mines. There would need to be something to draw them away so he and his companions could finish the search. Cerranos would need to be made to tell them what she knew, if she could even be so manipulated, and she would need to be made to call her minions away from the mines. Teelo would serve that purpose. He just needed a little push.</p>
+            <p><em>“It is the will of Iolensis that I must pursue this course.”</em> he thought. <em>“It is why I am here on this plane, and why she speaks to me so clearly. Something in this is bigger than the defiling of the land and the subjugation of these people. I must clear the path. I am Her instrument.  Her will be done.”</em></p>
+
+            <p>Aldoon glanced at Verthandi for a moment. <em>“How different are he and I really? We both do what we must in our way.”</em> He looked back at Cerranos and began to quietly recite the scripture.</p>
+
+            <p><em>“And her fury broke,<br/>
+                and the thunder cracked,<br/>
+                and the very ground the apostates stood upon split,<br/>
+                and the bodies of the enemies of the Iolensia were TORN ASUNDER.”</em></p>
+
+            <p>The conversation was cut short by a tremendous, booming crack. Pieces of the wooden platforming of the Stands flew every which way. The force of it pummeled to death a few of the kobold soldiers, but Cerranos and her dog-faced minion survived. Aldoon stepped out from the shadows.</p>
+            <p>The dog-man lifted his master and ran with her. As Aldoon had desperately hoped, the rest of his companions leapt into action.</p>
+            <p>Aldoon heard the Broken man recite something in an arcane language and Darkness engulfed the remaining kobold soldiers. Verthandi, seeing Cerranos and her lieutenant making a break for it, cast a spell as well, and suddenly the dog-faced man stopped short, paralyzed.</p>
+
+
+            <p>Battle cries sounded seemingly from everywhere as the Centaur soldiers emerged and engaged the bewildered kobolds. Teelo, freed from his indecision, leapt into the fray, slashing away, trying to get at their leader.</p>
+            <p>Furiel descended into the fray on her blackened wings to absent-mindedly strike down a kobold mage. She shouted at Teelo to back off and lead his people. <em>“Leave the devil to us, you fool!”</em></p>
+            <p>Aldoon pounded to the edge of the platform and recited his scripture again. Again, a great thunderous BOOM cratered the kobolds in the darkness. Dirt, bramble, and pieces of kobold went everywhere. As Aldoon marched forward, the darkness lifted. A bluish-green streak came from The Broken Man. One of the last of the kobold soldiers took the full force of the blast, and it tore a clean hole through its sternum.</p>
+            <p>Aldoon heard Furiel’s cold voice, <em>“Stay right here and wait for my illithid friend.”</em> and out of the corner of his eye, Aldoon saw her drive her sword through the dog-man’s chest and into the ground, pinning him in place. As it expired, it began to slowly change shape back into that of a hell-hound.</p>
+            <p>Verthandi descended upon its head.</p>
+
+            <p>Aldoon could not see Cerranos. She had escaped somewhere in the confusion. That was not what he’d planned on, but Aldoon thought it might actually be for the best.  Teelo, energized by the battle, gathered his troops and charged away toward the caves.  <em>“Meet us at the caves! Today we rid the land of these infernal vermin!”</em></p>
+            <p>That, at least, was to plan.</p>
+            <p>Now, Aldoon thought, Cerranos retreats, gathers reinforcements from the mines, fortifies the caves. Teelo lays siege, and keeps them busy.</p>
+            <p>Which leaves the mines open for Aldoon and his companions to search for the object and hopefully learn of its true significance.</p>
+            <p>Aldoon felt calm. He had done what was required. In Ashuud’s letter to the Beldena, he says <em>“Lightning may bring fire, rain may bring landslides and floods, the ground may shake, the mountains may burst forth. This is but Iolensis washing away what is impure, that we may see clearly our purpose.”</em></p>
+            <p>Aldoon was her instrument. He must do what must be done, here in these strange worlds. And he would go forth with a new understanding. That sometimes, to reach a righteous end, one must rain down fire.</p>
+
         </div>
     </body>
 </html>
